--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "clickityclack",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,6 @@
   "dependencies": {
     "express": "^4.17.3",
     "mongoose": "^6.3.0"
-  }
+  },
+  "description": ""
 }
